cmake_minimum_required(VERSION 2.8.11)

project(VKL CXX)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

include_directories(
	"${CMAKE_CURRENT_SOURCE_DIR}/include"
)

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/src")